--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,3 +5,5 @@
 @import "./pages/home";
 @import "./pages/login";
 @import "./pages/registration";
+@import "./pages/profile";
+@import "./pages/edit-profile";
