--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,3 +7,6 @@
 @import "./pages/registration";
 @import "./pages/profile";
 @import "./pages/edit-profile";
+@import "./pages/change-password";
+@import "./pages/notifications";
+@import "./pages/submission";
