--- a/sass/pages/_submission.scss
+++ b/sass/pages/_submission.scss
@@ -131,3 +131,221 @@
     }
   }
 }
+
+.form-check {
+  .form-check-input {
+    border-color: $black;
+
+    &:checked {
+      background-color: $primary;
+      border-color: $primary;
+    }
+  }
+
+  .form-check-label {
+    cursor: pointer;
+  }
+}
+
+.board__comments {
+  .appreved__btn {
+    background-color: green;
+    padding: 9px 30px;
+    @include font(17px, 600);
+    color: $white;
+    border-radius: 4px;
+  }
+
+  .reject__btn {
+    background-color: red;
+    padding: 9px 30px;
+    @include font(17px, 600);
+    color: $white;
+    border-radius: 4px;
+    margin-left: 10px;
+  }
+}
+
+.conversation__panel {
+  background-color: #F5F8FA;
+  border-radius: 5px;
+  border: 1px solid #cccccc;
+
+  .simplebar__content {
+    padding: 15px;
+    overflow-y: auto;
+    height: 400px;
+
+    li+li {
+      margin-top: 14px;
+    }
+
+    .user-msgbox {
+      max-width: 70%;
+      width: fit-content;
+
+      .media {
+        display: flex;
+        align-items: flex-start;
+
+        .media-body {
+          flex: 1;
+
+          p {
+            background-color: $primary;
+            color: $white;
+            padding: 3px 20px;
+            padding-bottom: 10px;
+            border-radius: 4px;
+            font-weight: 500;
+            position: relative;
+
+            &::before {
+              position: absolute;
+              top: 6px;
+              left: -5px;
+              width: 20px;
+              height: 20px;
+              background-color: $primary;
+              content: "";
+              border-radius: 1px;
+              transform: rotate(45deg);
+            }
+            small{
+              @include font(12px, 500);
+              line-height: 14px;
+            }
+          }
+        }
+
+        img {
+          margin-inline-end: 20px;
+          width: 28px;
+          height: 28px;
+          border-radius: 50%;
+        }
+      }
+    }
+
+    .admin-msgbox {
+      margin-inline-start: auto;
+      max-width: 70%;
+      width: fit-content;
+
+      .media {
+        display: flex;
+        align-items: flex-start;
+
+        .media-body {
+          flex: 1;
+
+          span{
+            @include font(14px, 500);
+          }
+
+          p {
+            background-color: $primary;
+            color: $white;
+            padding: 3px 20px;
+            padding-bottom: 10px;
+            border-radius: 4px;
+            font-weight: 500;
+            position: relative;
+
+            &::before {
+              position: absolute;
+              top: 6px;
+              right: -5px;
+              width: 20px;
+              height: 20px;
+              background-color: $primary;
+              content: "";
+              border-radius: 1px;
+              transform: rotate(45deg);
+            }
+            small{
+              @include font(12px, 500);
+              line-height: 14px;
+            }
+          }
+        }
+
+        img {
+          margin-inline-start: 20px;
+          width: 28px;
+          height: 28px;
+          border-radius: 50%;
+        }
+      }
+    }
+  }
+}
+
+.attachment__panel {
+  width: 100%;
+  padding: 4px 15px;
+  background-color: #F5F8FA;
+  margin-top: 24px;
+  border-radius: 5px;
+  border: 1px solid $black;
+
+  .input_groups {
+    flex-grow: 1;
+
+    input {
+      width: 100%;
+      height: 52px;
+      background-color: transparent;
+      border: 0;
+    }
+  }
+
+  .option {
+    padding-left: 70px;
+
+    .file {
+      label {
+        background-color: $black;
+        color: $white;
+        width: 35px;
+        height: 35px;
+        border-radius: 5px;
+        text-align: center;
+        line-height: 35px;
+      }
+    }
+
+    .sent {
+      button {
+        background-color: $primary;
+        color: $white;
+        width: 35px;
+        height: 35px;
+        border-radius: 5px;
+        text-align: center;
+        line-height: 35px;
+        border: 0;
+        margin-left: 10px;
+      }
+    }
+  }
+
+  .uploaded__file {
+    margin-right: 24px;
+    position: relative;
+
+    i {
+      position: absolute;
+      top: -5px;
+      right: -5px;
+      cursor: pointer;
+      color: $secondary;
+    }
+
+    img {
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+    }
+  }
+}
