login registration file responsive

--- a/sass/common/_common.scss
+++ b/sass/common/_common.scss
@@ -59,9 +59,9 @@ body {
   @include font(16px, 400);
   color: $black;
   font-family: 'Outfit', sans-serif;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+  // min-height: 100vh;
+  // display: flex;
+  // flex-direction: column;
   background-color: $body;
 }
 
