--- a/css/style.css
+++ b/css/style.css
@@ -58,9 +58,6 @@ body {
   font-weight: 400;
   color: #0A0F26;
   font-family: "Outfit", sans-serif;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   background-color: #F3F5FA;
 }
 
@@ -422,7 +419,8 @@ footer p a {
 .login_page .login_box {
   background: #ffffff;
   border-radius: 10px;
-  width: 750px;
+  max-width: 750px;
+  width: 100%;
   height: 600px;
   box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
   overflow: hidden;
@@ -512,7 +510,7 @@ footer p a {
   min-width: 100px;
   border-radius: 20px;
   color: #ffffff;
-  margin: 5px 20px 20px;
+  margin: 5px 20px 0;
   outline: none;
   font-size: 14px;
   font-weight: 600;
@@ -522,7 +520,13 @@ footer p a {
   color: #00ADEF;
   font-size: 14px;
   font-weight: 600;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
+}
+.login_page .right_info .mobile_signup {
+  color: #EF4444;
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 18px;
 }
 
 .registration_page .left_side {
