--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -43,3 +43,20 @@ header {
     }
   }
 }
+
+.mobile_menus {
+  padding-top: 5px;
+  position: relative;
+  z-index: 9;
+
+  .mobile_menu {
+    display: inline-block;
+    cursor: pointer;
+    @include font(17px, 500);
+
+    span {
+      margin-left: 5px;
+      font-size: 19px;
+    }
+  }
+}
