--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,9 @@ body {
   font-weight: 400;
   color: #0A0F26;
   font-family: "Outfit", sans-serif;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
   background-color: #F3F5FA;
 }
 
@@ -166,238 +169,20 @@ header .container-fluid .right_information .prf img {
   border-radius: 50%;
 }
 
-main {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-main .left_sidebar .profile_widget {
-  background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.08);
-  text-align: center;
-  padding: 30px;
-  border-radius: 10px;
-}
-main .left_sidebar .profile_widget .image figure {
-  border-radius: 50%;
-  margin-bottom: 20px;
-  display: inline-block;
+.mobile_menus {
+  padding-top: 5px;
   position: relative;
+  z-index: 9;
 }
-main .left_sidebar .profile_widget .image figure img {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-  border-radius: inherit;
-}
-main .left_sidebar .profile_widget .image .file_upload {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-}
-main .left_sidebar .profile_widget .image .file_upload i {
-  border-radius: 50%;
-  border: 4px solid #ffffff;
-  display: grid;
-  place-items: center;
-  background-color: #22C55E;
-  color: white;
-  font-size: 16px;
-  height: 40px;
-  width: 40px;
+.mobile_menus .mobile_menu {
+  display: inline-block;
   cursor: pointer;
-}
-main .left_sidebar .profile_widget .text h4 {
-  font-size: 22px;
-  font-weight: 500;
-}
-main .left_sidebar .profile_widget .text span {
   font-size: 17px;
-  font-weight: 400;
-  color: rgba(0, 0, 0, 0.9);
-}
-main .left_sidebar .main_menu {
-  margin-top: 20px;
-}
-main .left_sidebar .main_menu li a {
-  border-radius: 10px;
-  display: flex;
-  align-items: center;
-  padding: 14px;
-  color: #0A0F26;
-  width: 100%;
-  position: relative;
-  padding-left: 44px;
-  transition: all linear 0.2s;
-}
-main .left_sidebar .main_menu li a:hover {
-  background-color: #ffffff;
-}
-main .left_sidebar .main_menu li a h5 {
-  width: 200px;
-  font-size: 18px;
   font-weight: 500;
 }
-main .left_sidebar .main_menu li a i {
-  width: 30px;
-  position: absolute;
-  left: 14px;
-  top: 50%;
-  transform: translateY(-50%);
-}
-main .left_sidebar .main_menu li a .fa-power-off {
-  color: #EF4444;
-}
-main .left_sidebar .main_menu li a .logout {
-  color: #EF4444;
-}
-main .left_sidebar .main_menu li a span {
-  margin-left: auto;
-  background-color: #EF4444;
-  color: #ffffff;
-  font-size: 13px;
-  font-weight: 500;
-  width: 25px;
-  height: 25px;
-  text-align: center;
-  line-height: 25px;
-  border-radius: 50%;
-}
-main .left_sidebar .main_menu .active a {
-  color: #00ADEF;
-  background-color: #ffffff;
-}
-main .left_sidebar .main_menu .active a i {
-  font-size: 17px;
-}
-main .left_sidebar .main_menu .active a h5 {
-  color: #00ADEF;
-}
-main .right_info .dashboard_info .top_short_info {
-  margin-bottom: 24px;
-}
-main .right_info .dashboard_info .top_short_info .short_info_item {
-  background-color: #ffffff;
-  border-radius: 10px;
-  border: none;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.08);
-  padding: 30px 30px;
-}
-main .right_info .dashboard_info .top_short_info .short_info_item .media {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-main .right_info .dashboard_info .top_short_info .short_info_item .icon-wrap {
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-main .right_info .dashboard_info .top_short_info .short_info_item .icon-wrap i {
-  color: #ffffff;
-  font-size: 26px;
-}
-main .right_info .dashboard_info .top_short_info .short_info_item .count-detail h3 {
-  font-size: 28px;
-  font-weight: 600;
-  margin-bottom: 4px;
-}
-main .right_info .dashboard_info .top_short_info .short_info_item .bg-warning {
-  background-color: #ff9800 !important;
-}
-main .right_info .dashboard_info .top_short_info .short_info_item .bg-success {
-  background-color: #10b981 !important;
-}
-main .right_info .dashboard_info .top_short_info .short_info_item .bg-info {
-  background-color: #0ea5e9 !important;
-}
-main .right_info .dashboard_info .common_block {
-  background-color: #ffffff;
-  padding: 24px;
-  border-radius: 10px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.08);
-  margin-bottom: 24px;
-}
-main fieldset {
-  border: 1px solid #b8b8b8;
-  padding: 24px;
-  position: relative;
-  border-radius: 10px;
-  height: 100%;
-}
-main fieldset .sub__header {
-  background-color: #ffffff;
-  padding: 2px 8px;
-  position: absolute;
-  top: -16px;
-  left: 16px;
-}
-main td {
-  vertical-align: middle;
-}
-
-.common__title {
-  font-size: 24px;
-  font-weight: 600;
-  margin-bottom: 20px;
-  border-left: 2px solid #00ADEF;
-  border-right: 2px solid #00ADEF;
-  border-radius: 8px;
-  padding: 0px 10px 4px 10px;
-  display: inline-block;
-}
-
-.sub__header {
+.mobile_menus .mobile_menu span {
+  margin-left: 5px;
   font-size: 19px;
-  font-weight: 500;
-  margin-bottom: 20px;
-}
-
-.downloaded_files {
-  position: relative;
-  padding: 10px 0;
-}
-.downloaded_files::before {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 4px;
-  height: 100%;
-  background-color: #ddd;
-  content: "";
-  border-radius: 10px;
-}
-.downloaded_files li {
-  padding: 8px 0;
-  padding-left: 30px;
-  position: relative;
-}
-.downloaded_files li::before {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: -6px;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  background-color: #ffffff;
-  border: 2px solid #0A0F26;
-  content: "";
-  transition: all linear 0.2s;
-}
-.downloaded_files li a {
-  font-size: 17px;
-  font-weight: 500;
-  color: #0A0F26;
-  transition: all linear 0.2s;
-}
-.downloaded_files li:hover::before {
-  border-color: #00ADEF;
-}
-.downloaded_files li:hover a:hover {
-  color: #00ADEF;
 }
 
 footer {
@@ -527,6 +312,249 @@ footer p a {
   font-size: 14px;
   font-weight: 600;
   margin-bottom: 18px;
+}
+
+main {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+main .left_sidebar .profile_widget {
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.08);
+  text-align: center;
+  padding: 30px;
+  border-radius: 10px;
+}
+main .left_sidebar .profile_widget .image figure {
+  border-radius: 50%;
+  margin-bottom: 20px;
+  display: inline-block;
+  position: relative;
+}
+main .left_sidebar .profile_widget .image figure img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  border-radius: inherit;
+}
+main .left_sidebar .profile_widget .image .file_upload {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
+main .left_sidebar .profile_widget .image .file_upload i {
+  border-radius: 50%;
+  border: 4px solid #ffffff;
+  display: grid;
+  place-items: center;
+  background-color: #22C55E;
+  color: white;
+  font-size: 16px;
+  height: 40px;
+  width: 40px;
+  cursor: pointer;
+}
+main .left_sidebar .profile_widget .text h4 {
+  font-size: 22px;
+  font-weight: 500;
+}
+main .left_sidebar .profile_widget .text span {
+  font-size: 17px;
+  font-weight: 400;
+  color: rgba(0, 0, 0, 0.9);
+}
+main .left_sidebar .profile_widget .mobile_sidebar_close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  font-size: 18px;
+}
+main .left_sidebar .main_menu {
+  margin-top: 20px;
+}
+main .left_sidebar .main_menu li a {
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  padding: 14px;
+  color: #0A0F26;
+  width: 100%;
+  position: relative;
+  padding-left: 44px;
+  transition: all linear 0.2s;
+}
+main .left_sidebar .main_menu li a:hover {
+  background-color: #ffffff;
+}
+main .left_sidebar .main_menu li a h5 {
+  font-size: 18px;
+  font-weight: 500;
+}
+main .left_sidebar .main_menu li a i {
+  width: 30px;
+  position: absolute;
+  left: 14px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+main .left_sidebar .main_menu li a .fa-power-off {
+  color: #EF4444;
+}
+main .left_sidebar .main_menu li a .logout {
+  color: #EF4444;
+}
+main .left_sidebar .main_menu li a span {
+  margin-left: auto;
+  background-color: #EF4444;
+  color: #ffffff;
+  font-size: 13px;
+  font-weight: 500;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  line-height: 25px;
+  border-radius: 50%;
+}
+main .left_sidebar .main_menu .active a {
+  color: #00ADEF;
+  background-color: #ffffff;
+}
+main .left_sidebar .main_menu .active a i {
+  font-size: 17px;
+}
+main .left_sidebar .main_menu .active a h5 {
+  color: #00ADEF;
+}
+main .right_info .dashboard_info .top_short_info {
+  margin-bottom: 24px;
+}
+main .right_info .dashboard_info .top_short_info .short_info_item {
+  background-color: #ffffff;
+  border-radius: 10px;
+  border: none;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.08);
+  padding: 30px 30px;
+}
+main .right_info .dashboard_info .top_short_info .short_info_item .media {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+main .right_info .dashboard_info .top_short_info .short_info_item .icon-wrap {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+main .right_info .dashboard_info .top_short_info .short_info_item .icon-wrap i {
+  color: #ffffff;
+  font-size: 26px;
+}
+main .right_info .dashboard_info .top_short_info .short_info_item .count-detail h3 {
+  font-size: 28px;
+  font-weight: 600;
+  margin-bottom: 4px;
+}
+main .right_info .dashboard_info .top_short_info .short_info_item .bg-warning {
+  background-color: #ff9800 !important;
+}
+main .right_info .dashboard_info .top_short_info .short_info_item .bg-success {
+  background-color: #10b981 !important;
+}
+main .right_info .dashboard_info .top_short_info .short_info_item .bg-info {
+  background-color: #0ea5e9 !important;
+}
+main .right_info .dashboard_info .common_block {
+  background-color: #ffffff;
+  padding: 24px;
+  border-radius: 10px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.08);
+  margin-bottom: 24px;
+}
+main fieldset {
+  border: 1px solid #b8b8b8;
+  padding: 24px;
+  position: relative;
+  border-radius: 10px;
+  height: 100%;
+}
+main fieldset .sub__header {
+  background-color: #ffffff;
+  padding: 2px 8px;
+  position: absolute;
+  top: -16px;
+  left: 16px;
+}
+main td {
+  vertical-align: middle;
+}
+main th {
+  vertical-align: middle;
+}
+
+.common__title {
+  font-size: 24px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  border-left: 2px solid #00ADEF;
+  border-right: 2px solid #00ADEF;
+  border-radius: 8px;
+  padding: 0px 10px 4px 10px;
+  display: inline-block;
+}
+
+.sub__header {
+  font-size: 19px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.downloaded_files {
+  position: relative;
+  padding: 10px 0;
+}
+.downloaded_files::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 4px;
+  height: 100%;
+  background-color: #ddd;
+  content: "";
+  border-radius: 10px;
+}
+.downloaded_files li {
+  padding: 8px 0;
+  padding-left: 30px;
+  position: relative;
+}
+.downloaded_files li::before {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: -6px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  border: 2px solid #0A0F26;
+  content: "";
+  transition: all linear 0.2s;
+}
+.downloaded_files li a {
+  font-size: 17px;
+  font-weight: 500;
+  color: #0A0F26;
+  transition: all linear 0.2s;
+}
+.downloaded_files li:hover::before {
+  border-color: #00ADEF;
+}
+.downloaded_files li:hover a:hover {
+  color: #00ADEF;
 }
 
 .registration_page .left_side {
@@ -944,7 +972,7 @@ footer p a {
   font-size: 15px;
   font-weight: 600;
   border-radius: 4px;
-  padding: 6px 16px;
+  padding: 10px 16px;
   transition: all linear 0.2s;
   box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
 }
