--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,7 @@
 @import "./mixin/font";
 @import "./pages/home";
 @import "./pages/login";
+@import "./pages/dashboard";
 @import "./pages/registration";
 @import "./pages/profile";
 @import "./pages/edit-profile";
